Enable native access for the modules the descriptor names
enableNativeAccess names the bundled modules a launcher jar grants native
access, the in-jar equivalent of --enable-native-access; the class path is
granted by the outer jar's Enable-Native-Access: ALL-UNNAMED, which the JVM
reads under java -jar. A layer's modules only exist once the layer is defined,
so enableNativeAccess.<name> in the descriptor, or
jlayer.enableNativeAccess.<name> for a layer on disk, names those the launcher
grants when Launcher.layer defines it. A name that is not among the modules
is refused.

Granting is itself restricted, so the test module grants the launcher native
access through @jenesis.native once the build tool reads that tag.